Done with section 3

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -289,7 +289,7 @@ Of course, this relatively simple picture holds many uncertainties: the rate of 
 	\caption{\label{fig:chem_homog} A sketch of merging black-hole binary formation via the chemically homogeneous evolution channel.}
 \end{figure}
 
-What if some types of massive stars did not expand and converted most of their mass into a black hole? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger; if almost all of the star's mass was converted into a black hole rather than the $\sim$30--50\% of the mass which typically becomes the helium core (see \autoref{fig:BHremnant}), the merger timescale would shrink for a given separation, lifting the Roche lobe radius curve in \autoref{fig:Rmax} and removing the ``separation problem at birth''.  No fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries.  This scenario does, however, require some unproven assumptions regarding stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
+What if some types of massive stars did not expand and converted most of their mass into a black hole? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger; if almost all of the star's mass was converted into a black hole rather than the $\sim$30--50\% of the mass which typically becomes the helium core (see \autoref{fig:BHremnant}), the merger timescale would shrink for a given separation, lifting the Roche lobe radius curve in \autoref{fig:Rmax} and removing the ``separation problem at birth''.  No fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries.   Efficient mixing in high-mass, low-metallicity stars in close binaries, known as chemically homogeneous evolution, could enable this scenario.
 
 This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 \begin{itemize}
@@ -298,7 +298,11 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 \item[c--f.] Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity is sufficiently low that the wind-driven mass loss does not significantly widen the binary -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  
 \end{itemize}
 
-\citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive observed gravitational-wave sources (such as GW150914), though not the lowest-mass systems (see also \cite{duBoisson:2020,Riley:2020}).  
+\citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive observed gravitational-wave sources (such as GW150914), though not the lowest-mass systems (see also \cite{duBoisson:2020,Riley:2020}).  This scenario does, however, require some unproven assumptions regarding stellar evolution, with uncertain observational supporting evidence \citep{Almeida:2015, AbdulMasih:2021}.
+
+\textbf{Population III stars:} A somewhat similar evolutionary channel to chemically homogeneous evolution --- one in which stars in a close binary avoid significant radial expansion --- could play out for the first generation of metal-free stars in the early Universe, known as population III stars.  The absence of primordial carbon, nitrogen and oxygen in these stars could prevent the CNO cycle hydrogen fusion in the hydrogen shell around the helium-rich core, reducing radial expansion after the end of the main sequence \citep{Marigo:2001}.  In addition to removing the need for subsequent mass transfer as in the chemically homogeneous evolution channel, this could allow the star to retain its tightly bound hydrogen envelope when collapsing into a black hole \citep{Kinugawa:2021}.  Population III stars would also experience reduced mass loss through winds due to their zero metallicity.   Meanwhile, the initial mass function of zero-metallicity stars could itself favour higher masses.  All of these effects make population III stars promising progenitors for the formation of merging binary black holes \citep{Belczynski:2004popIII,Kinugawa:2014,Inayoshi:2017}.  However, there are significant uncertainties in the initial properties of population III binaries and the amount of stellar expansion that population III stars will experience \citep{Hirano:2014,Stacy:2016,Hartwig:2016,Belczynski:2017popIII}.
+
+
 
 \subsubsection{The black-hole matchmaking club: dynamical formation in dense stellar environments}
 
@@ -308,23 +312,23 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 	\caption{\label{fig:dynamical} A sketch of merging black-hole binary formation via the dynamical evolution channel.}
 \end{figure}
 
-The merging black holes may not have formed in the same binary at all.  Instead they formed from the collapse of independent massive stars (perhaps single, or each in its own separate binary), but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
+The merging black holes may not have formed in the same binary at all.  Instead, in this channel, they formed from the collapse of independent massive stars (perhaps single, or each in its own separate binary), but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
-\item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster centre as energy is equipartitioned throughout the cluster in the process known as mass segregation \citep[but see][]{Trenti:2013}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favour of the two heavier objects forming a binary.  
-\item[c,d.] If the orbital speed of the binary's components is greater than the typical speed of stars in the cluster (the binary is `hard'), then subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary. The interlopers are likely to leave with slightly higher speeds than they arrived with, each time removing energy from the binary.   Meanwhile, `soft' binaries, with orbital speeds smaller than the velocity dispersion in the cluster, will be disrupted.
+\item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster centre as energy is equipartitioned throughout the cluster in the process known as mass segregation \citep{Spitzer:1969,BinneyTremaine}, but see \citep{Trenti:2013}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favour of the two heavier objects forming a binary.  
+\item[c,d.] If the orbital speed of the binary's components is greater than the typical speed of stars in the cluster (the binary is `hard'), then subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary \citep{Heggie:1975}. The interlopers are likely to leave with slightly higher speeds than they arrived with, each time removing energy from the binary.   Meanwhile, `soft' binaries, with orbital speeds smaller than the velocity dispersion in the cluster, will be disrupted. 
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
-The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
+The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.  \citet{Bellovary:2016, Bartos:2016, Stone:2016, McKernan:2018, Tagawa:2020} described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
 
 \subsubsection{A team effort: combining multiple interactions}
 
-Of course, the channels outlined above need not be distinct, and the same binary may have benefited from multiple types of interaction while en route to coalescence.   \ilya{Studies that consistently combine stellar and binary evolution and dynamics at the same level of fidelity are scarce}.  Black holes brought together by dynamical interaction in globular clusters may be part of mass-transferring binaries earlier in their evolutionary histories.  Mass-transferring binaries that are too wide at the end of binary evolution to merge in the age of the Universe may be helped along by subsequent dynamical encounters \citep[e.g.,][]{Belczynski:2014VMS}.  The more massive star in an isolated binary may evolve chemically homogeneously, while its less massive companion expands and donates mass \citep{Marchant:2017}.  
+Of course, the channels outlined above need not be distinct, and the same binary may have benefited from multiple types of interaction while en route to coalescence.   New studies are now attempting to consistently combine stellar and binary evolution and dynamics at comparable levels of fidelity \citep[e.g.,][]{Santoliquido:2020}.  Black holes brought together by dynamical interaction in stellar clusters may be part of mass-transferring binaries earlier in their evolutionary histories.  Mass-transferring binaries that are too wide at the end of binary evolution to merge in the age of the Universe may be helped along by subsequent dynamical encounters \citep[e.g.,][]{Belczynski:2014VMS}.  The more massive star in an isolated binary may evolve chemically homogeneously, while its less massive companion expands and donates mass \citep{Marchant:2017}.  
 
 Hierarchical triple systems, with a tight inner binary and a third companion on a wider outer orbit are a particularly promising combination of the isolated evolution and dynamical formation channels.  A significant fraction of massive stars appear to be born in triples and higher multiplicity systems \citep{DucheneKraus:2013}.  Triples may also be formed dynamically through binary--binary scatterings \citep{MillerHamilton:2002b}.  Massive black holes in galactic nuclei --- or intermediate-mass black holes in globular clusters --- may also act as effective triple companions.   
 
-When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilsbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-center massive black hole as the outer companion.
+When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilsbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} and \citet{Martinez:2020} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-center massive black hole as the outer companion.
 
 \textbf{Primordial black holes:}  So far, we discussed black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
 
